# rules_spring_aot

./: .bazelrc  .bazelversion  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  maven_install.json  renovate.json
.bcr/: metadata.template.json
.github/workflows/: buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
bazelrc/: buildbuddy.bazelrc
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
examples/spring-shell-app/: BUILD.bazel  DemoApplication.java  HelloCommand.java  NativeImageHints.java
examples/spring-web-app/: BUILD.bazel  HelloController.java
spring_aot/: BUILD.bazel  SpringAotFactoriesProcessor.java  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
spring_aot/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
spring_aot/tests/: versions_test.bzl
