"Bazel dependencies"

module(
    name = "rules_spring_aot",
)

bazel_dep(name = "bazel_skylib", version = "1.8.0")
bazel_dep(name = "package_metadata", version = "0.0.3")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "gazelle", version = "0.44.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

spring_aot = use_extension("//spring_aot:extensions.bzl", "spring_aot")
spring_aot.toolchain(spring_aot_version = "3.4.7")
use_repo(spring_aot, "spring_aot_toolchains")

register_toolchains("@spring_aot_toolchains//:all")
