load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_java//java:defs.bzl", "java_binary")

# For stardoc to reference the files
exports_files([
    "defs.bzl",
])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_java//java:rules",
        "@rules_java//java/private:proto_support",
    ],
)

# Spring AOT Factories Processor - processes aot.factories files
java_binary(
    name = "spring_aot_factories_processor",
    srcs = ["SpringAotFactoriesProcessor.java"],
    main_class = "com.bazel.spring.aot.SpringAotFactoriesProcessor",
    visibility = ["//visibility:public"],
    deps = [],  # No external dependencies needed - uses standard Java APIs only
)
