# Override http_archive for local testing
local_repository(
    name = "rules_spring_aot",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_spring_aot setup #
######################
# Fetches the rules_spring_aot dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_spring_aot//spring_aot:repositories.bzl", "rules_spring_aot_dependencies")

rules_spring_aot_dependencies()
